Loads config.js and handles 404's
created a config.js file that loads and configures certain elements
onload.
created a custom 404 page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
 	<style>
 	.blue{background:blue;}
 	.yellow{background:yellow;}
+	.red{background:red;}
 	</style>
 	<script src="/javascripts/jquery.js"></script>
 	 <link href="/javascripts/bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -64,6 +65,7 @@
 	</div>
 
 	<script src="/javascripts/index.js"></script>
+	<script src="/javascripts/myConfig.js"></script>
 	
 	
 	
